<resources>
    <string name="app_name">Inventory App ABND</string>
    <string name="empty_view_text">No data added yet.\n Please start adding</string>
    <string name="cannot_match_uri_exception">Cannot match uri</string>
    <string name="quantity_list">Q: </string>
    <string name="product_name">Product: </string>
    <string name="supplier_name">Supplier: </string>
    <string name="supplier_contact">Supplier Contact: </string>
    <string name="price_list">Price: </string>
    <string name="delete_all_menu_text">Delete all items</string>
    <string name="add_new_item_menu_text">Add new item</string>
    <string name="delete_item_menu_text">Delete</string>
    <string name="save_item_menu_text">Update metadata</string>
    <string name="error_cannot_be_empty">Cannot be empty</string>
    <string name="error_negative_value">Cannot be negative</string>
    <string name="error_not_number">Numbers only</string>
    <string name="edit_activity_title">Edit</string>
    <string name="add_activity_title">Add</string>
    <string name="sell_button_text">Confirm sell</string>
    <string name="add_button_text">Confirm news items arrived</string>
    <string name="empty_list_for_available">List is empty. Please stast adding content</string>
    <string name="empty_list_for_soldout">List is empty</string>
    <string name="in_stock">inStock</string>
    <string name="tab_name_available">Available</string>
    <string name="tab_name_soldout">Sold Out</string>
    <string name="sell_one_button">Sell one</string>
    <string name="delete_all_dialog_text">Delete all records?</string>
    <string name="delete_all_dialog_text_positive">Yes</string>
    <string name="delete_all_dialog_text_negative">No</string>
    <string name="delete_dialog_text">Delete this record?</string>
    <string name="delete_dialog_text_positive">Yes</string>
    <string name="delete_dialog_text_negative">No</string>
</resources>
