<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:background="@color/colorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/list_item_left_padding"
        android:paddingRight="@dimen/list_item_right_padding"
        android:paddingTop="@dimen/minimum_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name" />

        <EditText
            android:id="@+id/item_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:paddingLeft="@dimen/list_item_left_padding"
        android:paddingRight="@dimen/list_item_right_padding"
        android:paddingTop="@dimen/minimum_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_list" />

        <EditText
            android:id="@+id/item_price_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/list_item_left_padding"
        android:paddingRight="@dimen/list_item_right_padding"
        android:paddingTop="@dimen/minimum_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_name" />

        <EditText
            android:id="@+id/item_supplier_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:paddingLeft="@dimen/list_item_left_padding"
        android:paddingRight="@dimen/list_item_right_padding"
        android:paddingTop="@dimen/minimum_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_contact" />

        <EditText
            android:id="@+id/item_supplier_contact_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:paddingLeft="@dimen/list_item_left_padding"
        android:paddingRight="@dimen/list_item_right_padding"
        android:paddingTop="@dimen/minimum_padding"
        android:layout_marginTop="@dimen/list_item_right_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_list" />

        <EditText
            android:id="@+id/item_quantity_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="56sp"/>

    </LinearLayout>

    <LinearLayout
        android:paddingLeft="@dimen/list_item_left_padding"
        android:paddingRight="@dimen/list_item_right_padding"
        android:paddingTop="@dimen/minimum_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Spinner
        android:id="@+id/spinner_item_to_add"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/add_items_button"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/add_button_text"
        android:visibility="invisible"/>
    </LinearLayout>


    <LinearLayout
        android:paddingLeft="@dimen/list_item_left_padding"
        android:paddingRight="@dimen/list_item_right_padding"
        android:paddingTop="@dimen/minimum_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Spinner
        android:id="@+id/spinner_item_to_sell"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:spinnerMode="dropdown"/>

    <Button
        android:id="@+id/sell_button"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/sell_button_text"
        android:background="@color/colorPrimaryDark"
        android:visibility="invisible"/>

    </LinearLayout>

</LinearLayout>
